--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -1,10 +1,25 @@
 <wm-page data-ng-controller="MainPageController" name="mainpage">
-  <wm-left-panel content="leftnav" columnwidth="2" name="left_panel1"></wm-left-panel>
-  <wm-mobile-navbar name="mobile_navbar1" title="Title" leftnavpaneliconclass="wi wi-menu" backbutton="false">
-    <wm-anchor caption="" name="AddLink" iconclass="wi wi-gear"></wm-anchor>
-  </wm-mobile-navbar>
-  <wm-content name="content1">
-    <wm-page-content columnwidth="12" name="page_content1"></wm-page-content>
-  </wm-content>
-  <wm-mobile-tabbar dataset="home,music,edit" name="mobile_tabbar1"></wm-mobile-tabbar>
+    <wm-left-panel content="leftnav" columnwidth="2" name="left_panel1"></wm-left-panel>
+    <wm-mobile-navbar name="mobile_navbar1" title="Title" leftnavpaneliconclass="wi wi-menu" backbutton="false">
+        <wm-anchor caption="" name="AddLink" iconclass="wi wi-gear"></wm-anchor>
+    </wm-mobile-navbar>
+    <wm-content name="content1">
+        <wm-page-content columnwidth="12" name="page_content1">
+            <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list" dataset="bind:Variables.gridVariables.dataSet" navigation="None" name="livelist2">
+                <wm-listtemplate layout="inline" name="listtemplate2">
+                    <wm-container class="media-left" name="container4">
+                        <wm-picture width="32pt" height="32pt" name="Picture" shape="circle" picturesource="bind:Variables.gridVariables.dataSet.image" class="media-object"></wm-picture>
+                    </wm-container>
+                    <wm-container class="media-body" padding="unset unset unset 1.25em" name="container5" on-tap="container5Tap($event, $isolateScope, item, currentItemWidgets)">
+                        <wm-label name="Name" class="p media-heading" caption="bind:Variables.gridVariables.dataSet.dataValue" fontsize="1.143" fontunit="em"></wm-label>
+                        <wm-label name="JobTitle" caption="JobTitle" class="p text-muted"></wm-label>
+                    </wm-container>
+                    <wm-container class="media-right media-top" name="container6">
+                        <wm-button class="btn-transparent" iconclass="wi wi-share fa-2x" name="button2"></wm-button>
+                    </wm-container>
+                </wm-listtemplate>
+            </wm-livelist>
+        </wm-page-content>
+    </wm-content>
+    <wm-mobile-tabbar dataset="home,music,edit" name="mobile_tabbar1"></wm-mobile-tabbar>
 </wm-page>
